<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lv77android.demo.MainActivity">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:fontFamily="monospace"
            android:text="@string/welcome_msg_before_login"
            android:textSize="30sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/title"
            android:layout_below="@+id/title"
            android:layout_margin="50dp"
            android:layout_centerInParent="true"
            android:hint="@string/login_name_input"
            android:fontFamily="monospace"
            android:inputType="textPersonName" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/pword"
            android:inputType="textPassword"
            android:layout_alignStart="@+id/username"
            android:layout_below="@+id/username"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"

            android:fontFamily="monospace"
            android:hint="@string/login_password_input"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/pword"
            android:layout_centerInParent="true"
            android:id="@+id/loginButton"
            android:text="@string/click_button_text"
            android:fontFamily="casual"
            android:textSize="20sp"
            android:onClick="loginCheck"/>

        <ImageView
            android:id="@+id/welcomeImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@id/loginButton"
            android:layout_margin="15dp"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            android:contentDescription="@string/login_success_bonus"
            android:src="@drawable/shark1"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
